Move to VSCode.  Update libs.